@@ -1,0 +1,2 @@
+Provides UI widget and layout functions for writing Shiny apps that
+work well on small screens.
