@@ -1,0 +1,6 @@
+$NetBSD: distinfo,v 1.1 2019/08/09 20:54:29 brook Exp $
+
+SHA1 (R/miniUI_0.1.1.1.tar.gz) = b256116a2089f7655c96fd95fe88453d5bbc7cab
+RMD160 (R/miniUI_0.1.1.1.tar.gz) = 68c9088d713d9684469bd4ecf35f070d10e0667b
+SHA512 (R/miniUI_0.1.1.1.tar.gz) = c70c170a27636652a3eac6e52b1a301e8f85e0282ff9c9652188cc5ca993b3e62d66955831e7e9833b762b05bba092545ed321b43e96657449e2acb9f83eeaf7
+Size (R/miniUI_0.1.1.1.tar.gz) = 97958 bytes
